ndb - bug#34046 - rename Ndbd_mem_manager::log2 to ndb_log2